--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@google/generative-ai": "^0.17.0",
     "hono": "^4.2.1",
     "resend": "^3.2.0",
     "zod": "^3.22.4"
